# hajimu_engine_ui

./: .gitignore  CMakeLists.txt  Makefile  README.md  hajimu.json  release.sh
.github/workflows/: build.yml
examples/: hello_ui.jp
include/: eng_ui.h
src/: eng_ui.c  plugin.c
